@@ -1,3 +1,9 @@
+2004-11-08 [colin]	0.5
+
+	* src/pgpinline.c
+		Update for new sylpheed (ability
+		to choose signing key)
+
 2004-11-08 [colin]
 
 	* src/pgpinline.c
